re PR fortran/33550 (ICE (segfault) when USEing ambiguous symbols)

2007-10-02  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/33550
	* decl.c (get_proc_name): Return rc if rc is non-zero; ie. if
	the name is a reference to an ambiguous symbol.

2007-10-02  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/33550
	* gfortran.dg/ambiguous_reference_1.f90: New test.

From-SVN: r128949